--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
           </div>
         </div>
       </div>
-      <a href="Shreya-sUpdate/MVP2" target="_blank" class="doc-link-btn">
+      <a href="MVP2" target="_blank" class="doc-link-btn">
         View Full Docs →
       </a>
     </div>
