--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
               <div><div class="summary-label">Issue</div><div class="summary-value">Loader spins forever when <code>GetProductImages</code> returns 400 / 500 / no internet</div></div>
               <div><div class="summary-label">Fix</div><div class="summary-value">PR raised & merged — loader now handles all error states gracefully</div></div>
               <div><div class="summary-label">Skills</div><div class="summary-value">Error state handling, WebView, API responses</div></div>
-              <div><div class="summary-label">Status</div><div class="summary-value">✅ Done (Closed)</div></div>
+              <div><div class="summary-label">Status</div><div class="summary-value"> Done (Closed)</div></div>
             </div>
             <button class="view-detail-btn" onclick="openModal('m1')">View Full Detail →</button>
           </div>
@@ -448,7 +448,7 @@
               <div><div class="summary-label">Issue</div><div class="summary-value">Both 'Safety Info' and 'Product Warning' shown when values are the same (ROI)</div></div>
               <div><div class="summary-label">Finding</div><div class="summary-value">Verified in PPE — not reproducible; deduplication working correctly</div></div>
               <div><div class="summary-label">Skills</div><div class="summary-value">PPE testing, regional variant handling, QA verification</div></div>
-              <div><div class="summary-label">Status</div><div class="summary-value">✅ Done</div></div>
+              <div><div class="summary-label">Status</div><div class="summary-value"> Done</div></div>
             </div>
             <button class="view-detail-btn" onclick="openModal('m5')">View Full Detail →</button>
           </div>
@@ -484,7 +484,7 @@
               <div><div class="summary-label">Feature</div><div class="summary-value">Displaying product dimensions on PDP per new Mango contract</div></div>
               <div><div class="summary-label">My Action</div><div class="summary-value">Mango contract updated, feature implemented end-to-end, Confluence documented</div></div>
               <div><div class="summary-label">Skills</div><div class="summary-value">Feature ownership, API contracts, Confluence docs</div></div>
-              <div><div class="summary-label">Status</div><div class="summary-value">✅ Done</div></div>
+              <div><div class="summary-label">Status</div><div class="summary-value"> Done</div></div>
             </div>
             <button class="view-detail-btn" onclick="openModal('m7')">View Full Detail →</button>
           </div>
@@ -508,7 +508,7 @@
               <div><div class="summary-label">What I Did</div><div class="summary-value">Created a POC Android app storing API keys in native <code>.so</code> files via NDK, accessed from Kotlin using JNI</div></div>
               <div><div class="summary-label">Outcome</div><div class="summary-value">Documented security benefits, limitations, and a clear recommendation — full POC on Confluence</div></div>
               <div><div class="summary-label">Skills</div><div class="summary-value">Android NDK, JNI, APK reverse engineering analysis, security hardening</div></div>
-              <div><div class="summary-label">Status</div><div class="summary-value">✅ Done</div></div>
+              <div><div class="summary-label">Status</div><div class="summary-value"> Done</div></div>
             </div>
             <button class="view-detail-btn" onclick="openModal('m8')">View Full Detail →</button>
           </div>
@@ -526,7 +526,7 @@
               <div><div class="summary-label">What I Did</div><div class="summary-value">Researched and documented best practices for storing sensitive keys and data in Android apps</div></div>
               <div><div class="summary-label">Outcome</div><div class="summary-value">Published findings on Confluence — covers EncryptedSharedPreferences, Keystore, NDK tradeoffs</div></div>
               <div><div class="summary-label">Skills</div><div class="summary-value">Encryption, key management, Android Keystore, security research</div></div>
-              <div><div class="summary-label">Status</div><div class="summary-value">✅ Done</div></div>
+              <div><div class="summary-label">Status</div><div class="summary-value"> Done</div></div>
             </div>
             <button class="view-detail-btn" onclick="openModal('m9')">View Full Detail →</button>
           </div>
@@ -592,7 +592,7 @@
           </div>
         </div>
       </div>
-      <a href="mvp2.html" target="_blank" class="doc-link-btn">View Full Docs →</a>
+      <a href="MVP2" target="_blank" class="doc-link-btn">View Full Docs →</a>
     </div>
 
     <div class="section-header"><h2>Architecture Breakdown</h2></div>
